--- a/desktop/build.gradle
+++ b/desktop/build.gradle
@@ -24,6 +24,15 @@ task dist(type: Jar) {
         attributes 'Main-Class': project.mainClassName
     }
 }
+task debug(dependsOn: classes, type: JavaExec) {
+main = project.mainClassName
+classpath = sourceSets.main.runtimeClasspath
+standardInput = System.in
+workingDir = project.assetsDir
+ignoreExitValue = true
+debug = true
+}
+
 
 dist.dependsOn classes
 
